fix aligning

--- a/components/HomePage/homepage.css
+++ b/components/HomePage/homepage.css
@@ -2,7 +2,7 @@
 .homepage-main{
     width: 100%;
     padding: 2rem 3rem;
-    padding-top: 11rem
+    padding-top: 2rem
 }
 
 .hero{
